--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<body>
 <head>
 </head>
 <header>
@@ -49,7 +50,7 @@
             The Summer session is centered around Basic Equine Care and Control. This session is more in-depth about grooming, handling, and …
             The Spring and Fall sessions are centered around Basic Horsemanship Skills. Each student will learn the basic skills of grooming handling…
         </p>
-        <button>4H Button</button>\
+        <button>4H Button</button>
         <h2>Lessons</h2>
         <p>
             $50 per 1 hr Private lesson
@@ -61,10 +62,34 @@
         </p>
     </div>
 </section>
+<section>
+    <div>
+        <h1>Boarding</h1>
+        <p>
+            We currently have several stalls open.  $475 per month per stall.
+        </p>
 
+        <p>
+            Direct access to Fairmont Park with hours of beautiful trails.
+        </p>
+        <button>feeding information</button> <button>stall information</button>
+        <p>
+            ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....
+        </p>
+
+        <p>
+            *New horses must be in quarantine for 2 weeks.*
+        </p>
+    </div>
+</section>
 <footer>
     <div>
-        <h1><span>SUBSCRIBE</span> TO GET IN TOUCH</h1>
+        <h1>Contact</h1>
+        <h2>Barn Manager</h2>
+        <p>
+            Tara Keller
+            Email: taraleekeller@gmail.com
+        </p>
         <ul>
             <li><a href="https://twitter.com/explore"><i class="fab fa-twitter-square"></i></a></li>
             <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></li>
@@ -72,8 +97,6 @@
         </ul>
     </div>
 </footer>
-
-<body>
 
 </body>
 
