--- a/deploy/index.html
+++ b/deploy/index.html
@@ -9,6 +9,7 @@
         <section id="burger">
             <i class="fas fa-bars nav-btns" id="burger-icon"></i>
         </section>
+        <h3>Solly Stables</h3>
     </div>
 </header>
 <section id="mission-statement">
@@ -17,9 +18,12 @@
         <p>
             *Solly Stables’ mission is to provide a unique equestrian experience, building self-confidence, fostering independence and caruing for horses by promoting compassion and learning through riding and educational experiences.
             *Solly Stables strives to achieve this mission regardless of a person's ability to contribute financially.
+         </p>
+         <p>
             *Through our 4H program, we want to reach out to kids and teenagers/adults. NO barn seems willing to have kids around these days…
             *Helping someone who needs a new outlook experience the healing power of the horse spirit is secondary part of our mission, and the most powerful!! We view it as a community event; just being around horses lifts your spirits!!
         </p>
+        <img src="img/MS-image.png" alt="">
         <p>
             Solly Stables is a Fairmount Park property operated by Solly Stable Riders Association, located in Fox Chase, Phila., effective July 2010. We are a 501(c)3 charitable organization.
         </p>
@@ -32,7 +36,9 @@
             If you would like to donate to Solly Stables we have several ways you can help.
             Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.
             We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…
+            All donations are tax deductible.
         </p>
+        <img src="img/DnV-image.png" alt="">
         <p>
             We are looking for volunteers for our programs and just general help around the barn while lessons are being held.
         </p>
@@ -44,12 +50,13 @@
 </section>
 <section id="Our Programs">
     <div>
-        <h1>Out Programs</h1>
+        <h1>Our Programs</h1>
         <H2>4H Program</H2>
         <p>
             The Summer session is centered around Basic Equine Care and Control. This session is more in-depth about grooming, handling, and …
             The Spring and Fall sessions are centered around Basic Horsemanship Skills. Each student will learn the basic skills of grooming handling…
         </p>
+        <img src="img/4h-image.png" alt="">
         <button>4H Button</button>
         <h2>Lessons</h2>
         <p>
@@ -60,6 +67,11 @@
         <p>
             Please emial/call for avaliability due to Covid-19 restrictions Thank you!
         </p>
+        <img src="img/meatball.png" alt="">
+        <img src="img/Bridgette.png" alt="">
+        <img src="img/rebel.png" alt="">
+        <img src="img/Happy.png" alt="">
+        <img src="img/pie.png" alt="">
     </div>
 </section>
 <section>
@@ -68,15 +80,16 @@
         <p>
             We currently have several stalls open.  $475 per month per stall.
         </p>
-
+        <img src="img/Screen Shot 2021-03-07 at 6.43.49 PM.png" alt="">
         <p>
             Direct access to Fairmont Park with hours of beautiful trails.
         </p>
         <button>feeding information</button> <button>stall information</button>
+ 
+        <img src="img/Screen Shot 2021-03-07 at 6.04.49 PM.png" alt=""> <img src="img/Screen Shot 2021-03-07 at 6.11.38 PM.png" alt="">
         <p>
             ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....
         </p>
-
         <p>
             *New horses must be in quarantine for 2 weeks.*
         </p>
@@ -90,6 +103,15 @@
             Tara Keller
             Email: taraleekeller@gmail.com
         </p>
+        <h2>Address</h2>
+        <p>
+            1140 Solly Ave
+            Philadelphia, PA 19111
+        </p>
+        <h2>Join our mailing list</h2>
+        <button>Email:</button>
+        <button>submit</button>
+
         <ul>
             <li><a href="https://twitter.com/explore"><i class="fab fa-twitter-square"></i></a></li>
             <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></li>
