--- a/deploy/index.html
+++ b/deploy/index.html
@@ -7,9 +7,9 @@
 <header>
     <div>
         <section id="burger">
-            <i class="fas fa-bars nav-btns" id="burger-icon"></i>
+            <i class="fas fa-bars"></i>
         </section>
-        <h3>Solly Stables</h3>
+        <h1>Solly Stables</h1>
     </div>
 </header>
 <section id="mission-statement">
@@ -113,9 +113,10 @@
         <button>submit</button>
 
         <ul>
-            <li><a href="https://twitter.com/explore"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></li>
-            <li><a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i></a></li>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
         </ul>
     </div>
 </footer>
