--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,28 +12,28 @@
         <h1>Solly Stables</h1>
     </div>
 </header>
-<section id="mission statement">
+<section id="mission-statement">
     <div>
-        <h1>Our Mission Statement</h1>
-        <p id="s1">
+        <h1 id="s1">Our Mission Statement</h1>
+        <p id="s2">
             *Solly Stables’ mission is to provide a unique equestrian experience, building self-confidence, fostering independence and caruing for horses by promoting compassion and learning through riding and educational experiences.
          </p>
-         <p id="s2">
+         <p id="s3">
             *Solly Stables strives to achieve this mission regardless of a person's ability to contribute financially.
          </p>
-         <p id="s3">
+         <p id="s4">
             *Through our 4H program, we want to reach out to kids and teenagers/adults. NO barn seems willing to have kids around these days…
         </p>
-        <p id="s4">
+        <p id="s5">
             *Helping someone who needs a new outlook experience the healing power of the horse spirit is secondary part of our mission, and the most powerful!! We view it as a community event; just being around horses lifts your spirits!!
         </p>
         <img src="img/MS-image.png" alt="barn image" id="barn-image">
-        <p id="s5">
+        <p id="S6 ">
             Solly Stables is a Fairmount Park property operated by Solly Stable Riders Association, located in Fox Chase, Phila., effective July 2010. We are a 501(c)3 charitable organization.
         </p>
     </div>
 </section>
-<section id="donations and volunteering">
+<section id="donations-and-volunteering">
     <div>
         <h1>Donations and Volunteering</h1>
         <p>
@@ -52,7 +52,7 @@
         </p>
     </div>
 </section>
-<section id="Our Programs">
+<section id="Our-Programs">
     <div>
         <h1>Our Programs</h1>
         <H2>4H Program</H2>
@@ -78,7 +78,7 @@
         <img src="img/pie.png" alt="">
     </div>
 </section>
-<section>
+<section id="boardng">
     <div>
         <h1>Boarding</h1>
         <p>
