--- a/deploy/index.html
+++ b/deploy/index.html
@@ -51,32 +51,25 @@
         </p>
     </div>
 </section>
-<section id="Our-Programs">
-    <div>
-        <h1>Our Programs</h1>
-        <H2>4H Program</H2>
-        <p>
-            The Summer session is centered around Basic Equine Care and Control. This session is more in-depth about grooming, handling, and …
-            The Spring and Fall sessions are centered around Basic Horsemanship Skills. Each student will learn the basic skills of grooming handling…
-        </p>
-        <img src="img/4h-image.png" alt="">
-        <button>4H Button</button>
-        <h2>Lessons</h2>
-        <p>
-            $50 per 1 hr Private lesson
-            $45 group lesson (max 3 riders (NOT ALWAYS AVAILABLE))1 hr
-            $35 per 1/2 hr Private lesson
-        </p>
-        <p>
-            Please emial/call for avaliability due to Covid-19 restrictions Thank you!
-        </p>
-        <img src="img/meatball.png" alt="">
-        <img src="img/Bridgette.png" alt="">
-        <img src="img/rebel.png" alt="">
-        <img src="img/Happy.png" alt="">
-        <img src="img/pie.png" alt="">
-    </div>
-</section>
+<div class="container-3">
+    <section id="0ur-programs">
+        <section id="4h">
+          <h1>4H Program</h1>
+        </section>
+        <section id="our-program-info-1">
+          <p>4‑H is a community for all kids with programs that suit a variety of backgrounds, interests, budgets and schedules. Whether AT HOME, in-school or after-school, in clubs or at camps, 4‑H’s positive youth development programs are available in your local community and welcome children who want to have fun, learn and grow.</p>
+        </section>
+        <section id="our-program-info-2">
+          <section>
+            <p>The Summer session is centered around Basic Equine Care and Control. This session is more in-depth about grooming, handling, and …</p>
+            <p>The Spring and Fall sessions are centered around Basic Horsemanship Skills. Each student will learn the basic skills of grooming handling…</p>
+          </section>
+          <aside>
+            <img src="img/4h-image.png" alt="">
+          </aside>
+        </section>
+      </section>
+</div>
 <section id="boardng">
     <div>
         <h1>Boarding</h1>
