--- a/deploy/index.html
+++ b/deploy/index.html
@@ -52,7 +52,7 @@
     </div>
 </section>
 <div class="container-3">
-    <section id="0ur-programs">
+    <section id="our-programs">
         <section id="4h">
           <h1>4H Program</h1>
         </section>
@@ -67,6 +67,26 @@
           <aside>
             <img src="img/4h-image.png" alt="">
           </aside>
+        </section>
+        <section id="lessons">
+            <h1>Lessons</h1>
+        </section>
+        <section id="our-progream-info-3">
+            <section>
+                <p>$50 per 1 hr Private lesson</p>
+                <p>$45 group lesson (max 3 riders (NOT ALWAYS AVAILABLE))1 hr</p>
+                <p>$35 per 1/2 hr Private lesson</p>
+            </section>
+        </section>
+        <section id="our-program-info-4">
+            <p>Please emial/call for avaliability due to Covid-19 restrictions Thank you!</p>
+        </section>
+        <section>
+            <img src="img/meatball.png" alt="">
+            <img src="img/Bridgette.png" alt="">
+            <img src="img/rebel.png" alt="">
+            <img src="img/Happy.png" alt="">
+            <img src="img/pie.png" alt="">
         </section>
       </section>
 </div>
