tryng to put scss in

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -32,25 +32,29 @@
       </section>
     </section>
   </div>
-<section id="donations-and-volunteering">
-    <div>
+<div class="donations-and-volunteering">
+    <section id="donations-and-volunteering-header">
         <h1>Donations and Volunteering</h1>
-        <p>
-            If you would like to donate to Solly Stables we have several ways you can help.
-            Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.
-            We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…
-            All donations are tax deductible.
-        </p>
-        <img src="img/DnV-image.png" alt="">
-        <p>
-            We are looking for volunteers for our programs and just general help around the barn while lessons are being held.
-        </p>
+    </section>
+    <section id="donations-and-volunteering-info1">
+        <p>If you would like to donate to Solly Stables we have several ways you can help.</p>
+        <p>Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.</p>
+        <p>We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…</p>
+        <p>All donations are tax deductible.</p>
+    </section>
+    <aside><img src="img/DnV-image.png" alt=""></aside>
+    <section id="donations-and-volunteering-info2">
+        <p>We are looking for volunteers for our programs and just general help around the barn while lessons are being held.</p>
+    </section>
+    <section id="donations-and-volunteering-button">
         <button>Read More</button>
-        <p>
-            You would need to have a parent or guardian (if under 18)available for paperwork signing initially. And as long as you are 16 or older you don't need one to stay with you. 
-        </p>
+    </section>
+    <section id="donations-and-volunteering-info3">
+        <p>You would need to have a parent or guardian (if under 18)available for paperwork signing initially. And as long as you are 16 or older you don't need one to stay with you. </p>
+    </section>
     </div>
 </section>
+</div>
 <div class="container-3">
     <section id="our-programs">
         <section id="4h">
