GRID FINALLY WORKED

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<body>
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Google Font -->
+   
+    
+     <!-- Font Awesome -->
+     
+
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Title Goes Here</title>
 </head>
+<body>
 <header>
     <div>
         <section id="burger">
@@ -57,7 +69,7 @@
 </div>
 <div class="container-3">
     <section id="our-programs">
-        <section id="4h">
+        <section id="fourh">
           <h1>4H Program</h1>
         </section>
         <section id="our-program-info-1">
@@ -85,12 +97,14 @@
         <section id="our-program-info-4">
             <p>Please emial/call for avaliability due to Covid-19 restrictions Thank you!</p>
         </section>
-        <section>
-            <img src="img/meatball.png" alt="">
-            <img src="img/Bridgette.png" alt="">
-            <img src="img/rebel.png" alt="">
-            <img src="img/Happy.png" alt="">
-            <img src="img/pie.png" alt="">
+        <section id="op-pics">
+          <aside>
+            <section id="i1"><img src="img/meatball.png" alt="meatball"></section>
+            <section id="i2"><img src="img/Bridgette.png" alt="bridgette"></section>
+            <section id="i3"><img src="img/rebel.png" alt="rebel"></section>
+            <section id="i4"><img src="img/Happy.png" alt="happy"></section>
+            <section id="i5"><img src="img/pie.png" alt="pie"></section>
+          </aside>
         </section>
       </section>
 </div>
@@ -143,8 +157,6 @@
 
 </body>
 
-<head>
-</head>
 <script src="js/scripts-min.js"></script>
 
 
