--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,7 +27,7 @@
 <div class="container">
     <section id="mission-statement">
       <section id="mission-heading">
-        <h1>Our mission statement</h1>
+        <h1>Our Mission Statement</h1>
       </section>
       <section id="mission-info-1">
           <p>*Solly Stables’ mission is to provide a unique equestrian experience, building self-confidence, fostering independence and caruing for horses by promoting compassion and learning through riding and educational experiences.</p>
@@ -69,8 +69,9 @@
 </div>
 <div class="container-3">
     <section id="our-programs">
+      <h1>Our Programs</h1>
         <section id="fourh">
-          <h1>4H Program</h1>
+          <h2>4H Program</h2>
         </section>
         <section id="our-program-info-1">
           <p>4‑H is a community for all kids with programs that suit a variety of backgrounds, interests, budgets and schedules. Whether AT HOME, in-school or after-school, in clubs or at camps, 4‑H’s positive youth development programs are available in your local community and welcome children who want to have fun, learn and grow.</p>
@@ -85,7 +86,7 @@
           </aside>
         </section>
         <section id="lessons">
-            <h1>Lessons</h1>
+            <h2>Lessons</h2>
         </section>
         <section id="our-progream-info-3">
             <section>
