--- a/deploy/index.html
+++ b/deploy/index.html
@@ -16,14 +16,11 @@
     <title>Title Goes Here</title>
 </head>
 <body>
-<header>
+
     <div>
-        <section id="burger">
-            <i class="fas fa-bars nav-btns" id="burger-icon"></i>
-        </section>
         <h1>Solly Stables</h1>
     </div>
-</header>
+
 <div class="container">
     <section id="mission-statement">
       <section id="mission-heading">
@@ -44,7 +41,7 @@
       </section>
     </section>
   </div>
-<div class="donations-and-volunteering">
+<div class="container2">
     <section id="donations-and-volunteering-header">
         <h1>Donations and Volunteering</h1>
     </section>
@@ -109,27 +106,30 @@
         </section>
       </section>
 </div>
-<section id="boardng">
-    <div>
+<div class="container4">
+    <section id="boarding">
         <h1>Boarding</h1>
-        <p>
-            We currently have several stalls open.  $475 per month per stall.
-        </p>
-        <img src="img/Screen Shot 2021-03-07 at 6.43.49 PM.png" alt="">
-        <p>
-            Direct access to Fairmont Park with hours of beautiful trails.
-        </p>
+    </section>
+    <section id="boarding-info1">
+        <p>We currently have several stalls open.  $475 per month per stall.</p>
+    </section>
+    <aside><img src="img/Screen Shot 2021-03-07 at 6.43.49 PM.png" alt="boarding1">></aside>
+    <section id="boarding-info2">
+        <p>Direct access to Fairmont Park with hours of beautiful trails.</p>
+    </section>
+    <section id="buttons">
         <button>feeding information</button> <button>stall information</button>
- 
+    </section>
+    <aside>
         <img src="img/Screen Shot 2021-03-07 at 6.04.49 PM.png" alt=""> <img src="img/Screen Shot 2021-03-07 at 6.11.38 PM.png" alt="">
-        <p>
-            ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....
-        </p>
-        <p>
-            *New horses must be in quarantine for 2 weeks.*
-        </p>
-    </div>
-</section>
+    </aside>
+    <section id="boarding-info3">
+        <p>ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....</p>
+    </section>
+    <section id="boarding-info4">
+        <p>*New horses must be in quarantine for 2 weeks.*</p>
+    </section>
+</div>
 <footer>
     <div>
         <h1>Contact</h1>
