trying to get section 4 grid in

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -106,28 +106,35 @@
         </section>
       </section>
 </div>
-<div class="container4">
+<div class="container-4">
     <section id="boarding">
-        <h1>Boarding</h1>
-    </section>
-    <section id="boarding-info1">
-        <p>We currently have several stalls open.  $475 per month per stall.</p>
-    </section>
-    <aside><img src="img/Screen Shot 2021-03-07 at 6.43.49 PM.png" alt="boarding1">></aside>
-    <section id="boarding-info2">
-        <p>Direct access to Fairmont Park with hours of beautiful trails.</p>
-    </section>
-    <section id="buttons">
-        <button>feeding information</button> <button>stall information</button>
-    </section>
-    <aside>
-        <img src="img/Screen Shot 2021-03-07 at 6.04.49 PM.png" alt=""> <img src="img/Screen Shot 2021-03-07 at 6.11.38 PM.png" alt="">
-    </aside>
-    <section id="boarding-info3">
-        <p>ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....</p>
-    </section>
-    <section id="boarding-info4">
-        <p>*New horses must be in quarantine for 2 weeks.*</p>
+        <section id="boarding-header">
+            <h1>Boarding</h1>
+        </section>
+        <section id="boarding-info-1">
+            <p>We currently have several stalls open.  $475 per month per stall.</p>
+        </section>
+        <section id="boarding-info-2">
+            <p>Direct access to Fairmont Park with hours of beautiful trails.</p>
+        </section>
+        <aside>
+            <img src="img/Screen Shot 2021-03-07 at 6.43.49 PM.png" alt="">
+        </aside>
+        <section id="feed-button">
+            <button>feeding information</button>
+        </section>
+        <section id="stall-button">
+            <button>stall information</button>
+        </section>
+        <aside>
+            <img src="img/Screen Shot 2021-03-07 at 6.04.49 PM.png" alt=""> <img src="img/Screen Shot 2021-03-07 at 6.11.38 PM.png" alt="">
+        </aside>
+        <section id="boarding-info-3">
+            <p>ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....</p>
+        </section>
+        <section id="boarding-info-4">
+            <p>*New horses must be in quarantine for 2 weeks.*</p>
+        </section>
     </section>
 </div>
 <footer>
