things are working

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -46,12 +46,16 @@
         <h1>Donations and Volunteering</h1>
     </section>
     <section id="donations-and-volunteering-info1">
-        <p>If you would like to donate to Solly Stables we have several ways you can help.</p>
-        <p>Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.</p>
-        <p>We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…</p>
-        <p>All donations are tax deductible.</p>
+        <section>
+            <p>If you would like to donate to Solly Stables we have several ways you can help.</p>
+            <p>Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.</p>
+            <p>We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…</p>
+            <p>All donations are tax deductible.</p>
+        </section>
+        <aside>
+            <img src="img/DnV-image.png" alt="">
+        </aside>
     </section>
-    <aside><img src="img/DnV-image.png" alt=""></aside>
     <section id="donations-and-volunteering-info2">
         <p>We are looking for volunteers for our programs and just general help around the barn while lessons are being held.</p>
     </section>
