--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,7 +13,7 @@
      
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Title Goes Here</title>
+    <title>Solly Stables</title>
 </head>
 <body>
 
@@ -105,7 +105,7 @@
         </section>
         <section id="op-pics">
           <aside>
-            <section id="i1"><img src="img/meatball.png" alt="meatball"></section>
+            <section id="i1"><img src="img/meatball.png" alt="meatball">
             <section id="i2"><img src="img/Bridgette.png" alt="bridgette"></section>
             <section id="i3"><img src="img/rebel.png" alt="rebel"></section>
             <section id="i4"><img src="img/Happy.png" alt="happy"></section>
