adding in images

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,8 +17,9 @@
 </head>
 <body>
 
-    <div>
-        <h7>Solly Stables</h7>
+    <div class="container">
+        <img src="img/door.png" alt="barn" style="width: 100%;">
+        <div class="Solly-Stables">Solly Stables</div>
     </div>
 
 <div class="container">
@@ -103,16 +104,25 @@
         <section id="our-program-info-4">
             <p>Please emial/call for avaliability due to Covid-19 restrictions Thank you!</p>
         </section>
-        <section id="op-pics">
-          <aside>
-            <section id="i1">
-              <img src="img/meatball.png" alt="meatball"><img src="img/Bridgette.png" alt="bridgette"><img src="img/rebel.png" alt="rebel">
-            </section>
-            <section id="i2">
-              <img src="img/Happy.png" alt="happy"><img src="img/pie.png" alt="pie">
-            </section>
-          </aside>
-        </section>
+        <div class="row">
+          <div class="column">
+            <img src="img/meatball.png" alt="meatball" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="img/Bridgette.png" alt="bridgette" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="img/rebel.png" alt="rebel" style="width:100%">
+          </div>
+        </div>
+        <div class="row2">
+          <div class="column">
+            <img src="img/Happy.png" alt="happy" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="img/pie.png" alt="pie" style="width:100%">
+          </div>
+        </div>
       </section>
 </div>
 <div class="container-4">
