--- a/deploy/index.html
+++ b/deploy/index.html
@@ -18,8 +18,8 @@
 <body>
 
     <div class="container">
-        <img src="img/door.png" alt="barn" style="width: 100%;">
-        <div class="Solly-Stables">Solly Stables</div>
+            <img src="img/door.png" alt="barn" style="width: 100%;">
+            <div class="Solly-Stables">Solly Stables</div>
     </div>
 
 <div class="container">
@@ -109,10 +109,10 @@
             <img src="img/meatball.png" alt="meatball" style="width:100%">
           </div>
           <div class="column">
-            <img src="img/Bridgette.png" alt="bridgette" style="width:100%">
+            <img src="img/Bridgette.png" alt="bridgette" style="width:100%" class="center">
           </div>
           <div class="column">
-            <img src="img/rebel.png" alt="rebel" style="width:100%">
+            <img src="img/rebel.png" alt="rebel" style="width:100%" >
           </div>
         </div>
         <div class="row2">
@@ -137,7 +137,7 @@
             <p>Direct access to Fairmont Park with hours of beautiful trails.</p>
         </section>
         <aside>
-            <img src="img/Screen Shot 2021-03-07 at 6.43.49 PM.png" alt="">
+            <img src="img/inside-barn.png" alt="">
         </aside>
         <section id="feed-button">
             <button>feeding information</button>
@@ -146,7 +146,7 @@
             <button>stall information</button>
         </section>
         <aside>
-            <img src="img/Screen Shot 2021-03-07 at 6.04.49 PM.png" alt=""> <img src="img/Screen Shot 2021-03-07 at 6.11.38 PM.png" alt="">
+            <img src="img/horses-in-snow.png" alt=""> <img src="img/horses-3.png" alt="">
         </aside>
         <section id="boarding-info-3">
             <p>ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....</p>
