--- a/deploy/index.html
+++ b/deploy/index.html
@@ -48,12 +48,14 @@
     </section>
   </section>
 </div>
-<div class="container2">
-    <section id="donations-and-volunteering-header">
+
+<div class="container">
+    <section id="donations-and-volunteering">
+      <section id="donations-and-volunteering-heading">
         <h1>Donations and Volunteering</h1>
-    </section>
-    <section id="donations-and-volunteering-info1">
-        <section>
+      </section>
+      <section id="donations-and-volunteering-info-1">
+          <section>
             <p>If you would like to donate to Solly Stables we have several ways you can help.</p>
             <p>Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.</p>
             <p>We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…</p>
@@ -62,18 +64,16 @@
         <aside>
             <img src="img/DnV-image.png" alt="">
         </aside>
+      </section>
+      <section id="donations-and-volunteering-info-2">
+        <section>
+            <p>We are looking for volunteers for our programs and just general help around the barn while lessons are being held.</p>
+            <p>Most volunteers with no horse experience do things like sweeping the floors, cleaning the bathroom, sweeping down cobwebs, cleaning water buckets, helping with stall cleanings, etc</p>
+        </section>
+      </section>
     </section>
-    <section id="donations-and-volunteering-info2">
-        <p>We are looking for volunteers for our programs and just general help around the barn while lessons are being held.</p>
-    </section>
-    <section id="donations-and-volunteering-button">
-        <button>Read More</button>
-    </section>
-    <section id="donations-and-volunteering-info3">
-        <p>You would need to have a parent or guardian (if under 18)available for paperwork signing initially. And as long as you are 16 or older you don't need one to stay with you. </p>
-    </section>
-</div>
-<div class="container-3">
+  </div>
+<div class="container">
     <section id="our-programs">
       <h1>Our Programs</h1>
         <section id="fourh">
@@ -173,12 +173,6 @@
         <button>Email:</button>
         <button>submit</button>
 
-        <ul>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
-        </ul>
     </div>
 </footer>
 
