trying to finish the project

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -16,12 +16,10 @@
     <title>Title Goes Here</title>
 </head>
 <body>
-
-    <div class="container">
-            <img src="img/door.png" alt="barn" style="width: 100%;">
-            <div class="Solly-Stables">Solly Stables</div>
-    </div>
-
+<div class="container">
+        <img src="img/door.png" alt="barn" style="width: 100%;">
+        <div class="Solly-Stables">Solly Stables</div>
+</div>
 <div class="container">
   <section id="mission-statement">
     <section id="mission-heading">
@@ -48,82 +46,88 @@
     </section>
   </section>
 </div>
-
 <div class="container">
-    <section id="donations-and-volunteering">
-      <section id="donations-and-volunteering-heading">
-        <h1>Donations and Volunteering</h1>
+  <section id="donations-and-volunteering">
+    <section id="donations-and-volunteering-heading">
+      <h1>Donations and Volunteering</h1>
+    </section>
+    <section id="donations-and-volunteering-info-1">
+      <section>
+        <p>If you would like to donate to Solly Stables we have several ways you can help.</p>
+        <p>Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each
+          page.</p>
+        <p>We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…</p>
+        <p>All donations are tax deductible.</p>
       </section>
-      <section id="donations-and-volunteering-info-1">
-          <section>
-            <p>If you would like to donate to Solly Stables we have several ways you can help.</p>
-            <p>Donate money for building improvements and maintenance by clicking on our gofundme link to the right on each page.</p>
-            <p>We are always in need of supplies such as toilet paper, paper towels, soap, trash bags, cat food…</p>
-            <p>All donations are tax deductible.</p>
-        </section>
-        <aside>
-            <img src="img/DnV-image.png" alt="">
-        </aside>
-      </section>
-      <section id="donations-and-volunteering-info-2">
-        <section>
-            <p>We are looking for volunteers for our programs and just general help around the barn while lessons are being held.</p>
-            <p>Most volunteers with no horse experience do things like sweeping the floors, cleaning the bathroom, sweeping down cobwebs, cleaning water buckets, helping with stall cleanings, etc</p>
-        </section>
+      <aside>
+        <img src="img/DnV-image.png" alt="">
+      </aside>
+    </section>
+    <section id="donations-and-volunteering-info-2">
+      <section>
+        <p>We are looking for volunteers for our programs and just general help around the barn while lessons are being
+          held.</p>
+        <p>Most volunteers with no horse experience do things like sweeping the floors, cleaning the bathroom, sweeping
+          down cobwebs, cleaning water buckets, helping with stall cleanings, etc</p>
       </section>
     </section>
-  </div>
+  </section>
+</div>
 <div class="container">
-    <section id="our-programs">
-      <h1>Our Programs</h1>
-        <section id="fourh">
-          <h2>4H Program</h2>
-        </section>
-        <section id="our-program-info-1">
-          <p>4‑H is a community for all kids with programs that suit a variety of backgrounds, interests, budgets and schedules. Whether AT HOME, in-school or after-school, in clubs or at camps, 4‑H’s positive youth development programs are available in your local community and welcome children who want to have fun, learn and grow.</p>
-        </section>
-        <section id="our-program-info-2">
-          <section>
-            <p>The Summer session is centered around Basic Equine Care and Control. This session is more in-depth about grooming, handling, and …</p>
-            <p>The Spring and Fall sessions are centered around Basic Horsemanship Skills. Each student will learn the basic skills of grooming handling…</p>
-          </section>
-          <aside>
-            <img src="img/4h-image.png" alt="">
-          </aside>
-        </section>
-        <section id="lessons">
-            <h2>Lessons</h2>
-        </section>
-        <section id="our-progream-info-3">
-            <section>
-                <p>$50 per 1 hr Private lesson</p>
-                <p>$45 group lesson (max 3 riders (NOT ALWAYS AVAILABLE))1 hr</p>
-                <p>$35 per 1/2 hr Private lesson</p>
-            </section>
-        </section>
-        <section id="our-program-info-4">
-            <p>Please emial/call for avaliability due to Covid-19 restrictions Thank you!</p>
-        </section>
-        <div class="row">
-          <div class="column">
-            <img src="img/meatball.png" alt="meatball" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="img/Bridgette.png" alt="bridgette" style="width:100%" class="center">
-          </div>
-          <div class="column">
-            <img src="img/rebel.png" alt="rebel" style="width:100%" >
-          </div>
-        </div>
-        <div class="row2">
-          <div class="column">
-            <img src="img/Happy.png" alt="happy" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="img/pie.png" alt="pie" style="width:100%">
-          </div>
-        </div>
+  <section id="our-programs">
+    <h1>Our Programs</h1>
+    <section id="fourh">
+      <h2>4H Program</h2>
+    </section>
+    <section id="our-program-info-1">
+      <p>4‑H is a community for all kids with programs that suit a variety of backgrounds, interests, budgets and
+        schedules. Whether AT HOME, in-school or after-school, in clubs or at camps, 4‑H’s positive youth development
+        programs are available in your local community and welcome children who want to have fun, learn and grow.</p>
+    </section>
+    <section id="our-program-info-2">
+      <section>
+        <p>The Summer session is centered around Basic Equine Care and Control. This session is more in-depth about
+          grooming, handling, and …</p>
+        <p>The Spring and Fall sessions are centered around Basic Horsemanship Skills. Each student will learn the basic
+          skills of grooming handling…</p>
       </section>
+      <aside>
+        <img src="img/4h-image.png" alt="">
+      </aside>
+    </section>
+    <section id="lessons">
+      <h2>Lessons</h2>
+    </section>
+    <section id="our-progream-info-3">
+      <section>
+        <p>$50 per 1 hr Private lesson</p>
+        <p>$45 group lesson (max 3 riders (NOT ALWAYS AVAILABLE))1 hr</p>
+        <p>$35 per 1/2 hr Private lesson</p>
+      </section>
+    </section>
+    <section id="our-program-info-4">
+      <p>Please emial/call for avaliability due to Covid-19 restrictions Thank you!</p>
+    </section>
+    <div class="row">
+      <div class="column">
+        <img src="img/meatball.png" alt="meatball" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="img/Bridgette.png" alt="bridgette" style="width:100%" class="center">
+      </div>
+      <div class="column">
+        <img src="img/rebel.png" alt="rebel" style="width:100%">
+      </div>
+    </div>
+    <div class="row2">
+      <div class="column">
+        <img src="img/Happy.png" alt="happy" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="img/pie.png" alt="pie" style="width:100%">
+      </div>
+    </div>
+  </section>
 </div>
 <div class="container-4">
     <section id="boarding">
@@ -131,7 +135,7 @@
             <h1>Boarding</h1>
         </section>
         <section id="boarding-info-1">
-            <p>We currently have several stalls open.  $475 per month per stall.</p>
+            <p>We currently have several stalls open. $475 per month per stall.</p>
         </section>
         <section id="boarding-info-2">
             <p>Direct access to Fairmont Park with hours of beautiful trails.</p>
@@ -149,7 +153,10 @@
             <img src="img/horses-in-snow.png" alt=""> <img src="img/horses-3.png" alt="">
         </aside>
         <section id="boarding-info-3">
-            <p>ALL Boarders must follow the  rules and regulations set by Solly Stables Riders Association, SSRA, and Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs), vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e. cleaning up any manure dropped by your horse), and etc.....</p>
+            <p>ALL Boarders must follow the rules and regulations set by Solly Stables Riders Association, SSRA, and
+                Fairmount Park. Including, but not limited to, deworming (we have both rotational and fecal programs),
+                vaccinations, quarantine protocols, trail permits, equipment storage, property maintenance (i.e.
+                cleaning up any manure dropped by your horse), and etc.....</p>
         </section>
         <section id="boarding-info-4">
             <p>*New horses must be in quarantine for 2 weeks.*</p>
