tryingto fix it

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,7 +13,7 @@
 
 
   <link rel="stylesheet" href="css/styles.css">
-  <title>Solly Stables</title>
+  <title>Title Goes Here</title>
 </head>
 
 <body>
